--- a/Lenguaje de Marcas/Pagina Web/css/estilos2.css
+++ b/Lenguaje de Marcas/Pagina Web/css/estilos2.css
@@ -449,6 +449,11 @@ html {
    text-align: center;
 }
 
+.p_contacto {
+   margin-top: 7px;
+   margin-bottom: 7px;
+}
+
  /*** FOOTER ***/
  
  .footer {
